syntax = "proto3";

package katium.client.qq.packet;

option java_package = "katium.client.qq.network.pb";
option java_outer_classname = "PbCmd0x6ff";

message C501ResponseBody {
  SubCommand501ResponseBody body = 1281;
}

message SubCommand501ResponseBody {
  bytes sigSession = 1;
  bytes sessionKey = 2;
  repeated ServerAddresses addresses = 3;
}

message ServerAddresses {
  uint32 serviceType = 1;
  repeated ServerAddress addresses = 2;
}

message ServerAddress {
  optional uint32 type = 1;
  fixed32 ip = 2;
  uint32 port = 3;
  optional uint32 area = 4;
}

