syntax = "proto3";

package katium.client.qq.packet;

option java_package = "katium.client.qq.network.pb";
option java_outer_classname = "PbLongMessages";

message LongMessagesRequest {
  int32 subCommand = 1;
  int32 termType = 2;
  int32 platformType = 3;
  repeated LongMessagesUploadRequest upload = 4;
  repeated LongMessagesDownloadRequest download = 5;
  repeated LongMessagesDeleteRequest delete = 6;
  int32 agentType = 10;
}

message LongMessagesUploadRequest {
  int32 type = 1;
  int64 toUin = 2;
  int32 id = 3;
  bytes content = 4;
  int32 storeType = 5;
  bytes ukey = 6;
  int32 needCache = 7;
}

message LongMessagesDownloadRequest {
  int32 fromUin = 1;
  bytes resourceID = 2;
  int32 type = 3;
  int32 needCache = 4;
}

message LongMessagesDeleteRequest {
  bytes resourceID = 1;
  int32 type = 2;
}

message LongMessagesResponse {
  int32 subCommand = 1;
  repeated LongMessagesUploadResponse upload = 2;
  repeated LongMessagesDownloadResponse download = 3;
  repeated LongMessagesDeleteResponse delete = 4;
}

message LongMessagesUploadResponse {
  int32 result = 1;
  int32 messageID = 2;
  bytes resourceID = 3;
}

message LongMessagesDownloadResponse {
  int32 result = 1;
  bytes resourceID = 2;
  bytes content = 3;
}

message LongMessagesDeleteResponse {
  int32 result = 1;
  bytes resourceID = 2;
}
